force-app/main/default/objects/Daily_Log__c/Daily_Log__c.object-meta.xml
<CustomObject>
    <label>Daily Attendance</label>
    <nameField>
        <displayFormat>Log Id - {00000}</displayFormat>
        <label>Log Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Attendances</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>