force-app/main/default/objects/Daily_Log__c/fields/Above_2_Mins_Visit__c.field-meta.xml
<CustomField>
    <fullName>Above_2_Mins_Visit__c</fullName>
    <label>Above 2 Mins Visit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>