force-app/main/default/objects/Daily_Log__c/fields/Actual_Place__c.field-meta.xml
<CustomField>
    <fullName>Actual_Place__c</fullName>
    <label>Actual Place</label>
    <length>250</length>
    <type>Text</type>
</CustomField>