force-app/main/default/objects/Daily_Log__c/fields/ASM_Id__c.field-meta.xml
<CustomField>
    <fullName>ASM_Id__c</fullName>
    <formula>IF(
OR(
Owner:User.Profile_Name__c = &quot;ASM&quot;,
Owner:User.Profile_Name__c = &quot;Deputy ASM&quot;,
Owner:User.Profile_Name__c = &quot;Sr. ASM&quot;
),
Owner:User.Employee_Code__c,

IF(
OR(
Owner:User.Manager.Profile_Name__c = &quot;ASM&quot;,
Owner:User.Manager.Profile_Name__c = &quot;Deputy ASM&quot;,
Owner:User.Manager.Profile_Name__c = &quot;Sr. ASM&quot;
),
Owner:User.Manager.Employee_Code__c,

IF(
OR(
Owner:User.Manager.Manager.Profile_Name__c = &quot;ASM&quot;,
Owner:User.Manager.Manager.Profile_Name__c = &quot;Deputy ASM&quot;,
Owner:User.Manager.Manager.Profile_Name__c = &quot;Sr. ASM&quot;
),
Owner:User.Manager.Manager.Employee_Code__c,

IF(
OR(
Owner:User.Manager.Manager.Manager.Profile_Name__c = &quot;ASM&quot;,
Owner:User.Manager.Manager.Manager.Profile_Name__c = &quot;Deputy ASM&quot;,
Owner:User.Manager.Manager.Manager.Profile_Name__c = &quot;Sr. ASM&quot;
),
Owner:User.Manager.Manager.Manager.Employee_Code__c,
&apos;&apos;
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ASM Id</label>
    <type>Text</type>
</CustomField>