force-app/main/default/objects/Daily_Log__c/fields/ASM_Name__c.field-meta.xml
<CustomField>
    <fullName>ASM_Name__c</fullName>
    <formula>IF(
OR(
Owner:User.Profile_Name__c = &quot;ASM&quot;,
Owner:User.Profile_Name__c = &quot;Deputy ASM&quot;,
Owner:User.Profile_Name__c = &quot;Sr. ASM&quot;
),
Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName,

IF(
OR(
Owner:User.Manager.Profile_Name__c = &quot;ASM&quot;,
Owner:User.Manager.Profile_Name__c = &quot;Deputy ASM&quot;,
Owner:User.Manager.Profile_Name__c = &quot;Sr. ASM&quot;
),
Owner:User.Manager.FirstName &amp; &quot; &quot; &amp; Owner:User.Manager.LastName,

IF(
OR(
Owner:User.Manager.Manager.Profile_Name__c = &quot;ASM&quot;,
Owner:User.Manager.Manager.Profile_Name__c = &quot;Deputy ASM&quot;,
Owner:User.Manager.Manager.Profile_Name__c = &quot;Sr. ASM&quot;
),
Owner:User.Manager.Manager.FirstName &amp; &quot; &quot; &amp; Owner:User.Manager.Manager.LastName,

IF(
OR(
Owner:User.Manager.Manager.Manager.Profile_Name__c = &quot;ASM&quot;,
Owner:User.Manager.Manager.Manager.Profile_Name__c = &quot;Deputy ASM&quot;,
Owner:User.Manager.Manager.Manager.Profile_Name__c = &quot;Sr. ASM&quot;
),
Owner:User.Manager.Manager.Manager.FirstName &amp; &quot; &quot; &amp; Owner:User.Manager.Manager.Manager.LastName,
&apos;&apos;
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ASM Name</label>
    <type>Text</type>
</CustomField>