force-app/main/default/objects/Daily_Log__c/fields/Assigned_Beat__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Beat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Beat</label>
    <referenceTo>Child_beat__c</referenceTo>
    <relationshipLabel>Daily Attendances (Assigned Beat)</relationshipLabel>
    <relationshipName>Daily_Attendances</relationshipName>
    <type>Lookup</type>
</CustomField>