force-app/main/default/objects/Daily_Log__c/fields/Assigned_Beat_Name__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Beat_Name__c</fullName>
    <formula>Assigned_Beat__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Beat Name</label>
    <type>Text</type>
</CustomField>