force-app/main/default/objects/Daily_Log__c/fields/Beat_Switch_History__c.field-meta.xml
<CustomField>
    <fullName>Beat_Switch_History__c</fullName>
    <label>Beat Switch History</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>