force-app/main/default/objects/Daily_Log__c/fields/Calls_Made__c.field-meta.xml
<CustomField>
    <fullName>Calls_Made__c</fullName>
    <formula>IF( Total_No_of_Outlets__c == 0, 0,    Total_Calls__c /  Total_No_of_Outlets__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calls Made %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>