force-app/main/default/objects/Daily_Log__c/fields/Child_beat__c.field-meta.xml
<CustomField>
    <fullName>Child_beat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child beat</label>
    <referenceTo>Child_beat__c</referenceTo>
    <relationshipName>Daily_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>