force-app/main/default/objects/Daily_Log__c/fields/Clock_Out_Location__c.field-meta.xml
<CustomField>
    <fullName>Clock_Out_Location__c</fullName>
    <label>Day ended Location</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>