force-app/main/default/objects/Daily_Log__c/fields/Colleague_name__c.field-meta.xml
<CustomField>
    <fullName>Colleague_name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Colleague name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Daily_Logs1</relationshipName>
    <type>Lookup</type>
</CustomField>