force-app/main/default/objects/Daily_Log__c/fields/Collection_Calls__c.field-meta.xml
<CustomField>
    <fullName>Collection_Calls__c</fullName>
    <label>Collection Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>