force-app/main/default/objects/Daily_Log__c/fields/Current_Beat__c.field-meta.xml
<CustomField>
    <fullName>Current_Beat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Worked Beat</label>
    <referenceTo>Child_beat__c</referenceTo>
    <relationshipLabel>Daily Attendances (Current Beat)</relationshipLabel>
    <relationshipName>Daily_Logs1</relationshipName>
    <type>Lookup</type>
</CustomField>