force-app/main/default/objects/Daily_Log__c/fields/Current_Beat_Substockiest__c.field-meta.xml
<CustomField>
    <fullName>Current_Beat_Substockiest__c</fullName>
    <formula>CASESAFEID(Current_Beat__r.Sub_Stockist__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Beat Substockiest</label>
    <type>Text</type>
</CustomField>