force-app/main/default/objects/Daily_Log__c/fields/CurrentBeat_Primary_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>CurrentBeat_Primary_Customer_Id__c</fullName>
    <formula>CASESAFEID(Current_Beat__r.Primary_Customer__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CurrentBeat Primary Customer Id</label>
    <type>Text</type>
</CustomField>