force-app/main/default/objects/Daily_Log__c/fields/Day__c.field-meta.xml
<CustomField>
    <fullName>Day__c</fullName>
    <formula>CASE(
MOD(LogDate__c   - DATE(1985,6,24), 7),
0, &quot;Monday&quot;,
1, &quot;Tuesday&quot;,
2, &quot;Wednesday&quot;,
3, &quot;Thursday&quot;,
4, &quot;Friday&quot;,
5, &quot;Saturday&quot;,
6, &quot;Sunday&quot;,
&quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week Day</label>
    <type>Text</type>
</CustomField>