force-app/main/default/objects/Daily_Log__c/fields/Day_ended_time__c.field-meta.xml
<CustomField>
    <fullName>Day_ended_time__c</fullName>
    <label>Day ended time</label>
    <type>DateTime</type>
</CustomField>