force-app/main/default/objects/Daily_Log__c/fields/Day_Started_Date__c.field-meta.xml
<CustomField>
    <fullName>Day_Started_Date__c</fullName>
    <formula>DATEVALUE(Day_started_time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day Started Date</label>
    <type>Date</type>
</CustomField>