force-app/main/default/objects/Daily_Log__c/fields/Day_started_time__c.field-meta.xml
<CustomField>
    <fullName>Day_started_time__c</fullName>
    <label>Day started time</label>
    <type>DateTime</type>
</CustomField>