force-app/main/default/objects/Daily_Log__c/fields/Difference_of_Distance__c.field-meta.xml
<CustomField>
    <fullName>Difference_of_Distance__c</fullName>
    <formula>KMs_Travelled__c - Distance_Travelled_Map__c</formula>
    <label>Not in use</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>