force-app/main/default/objects/Daily_Log__c/fields/Distance_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>Distance_Salesforce__c</fullName>
    <label>Distance From Visits (Salesforce)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>