force-app/main/default/objects/Daily_Log__c/fields/Distance_Travelled__c.field-meta.xml
<CustomField>
    <fullName>Distance_Travelled__c</fullName>
    <formula>KMs_Travelled__c  + Last_visit_distance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distance Travelled by System</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>