force-app/main/default/objects/Daily_Log__c/fields/Distance_Travelled_by_Odometer__c.field-meta.xml
<CustomField>
    <fullName>Distance_Travelled_by_Odometer__c</fullName>
    <formula>IF(
  
   End_Day_Odometer_Reading_KM__c &gt; Start_Day_Odometer_Reading_KM__c
  ,
  End_Day_Odometer_Reading_KM__c - Start_Day_Odometer_Reading_KM__c,
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distance Travelled (by Odometer)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>