force-app/main/default/objects/Daily_Log__c/fields/Distance_Travelled_Map__c.field-meta.xml
<CustomField>
    <fullName>Distance_Travelled_Map__c</fullName>
    <label>Distance Travelled Map</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>