force-app/main/default/objects/Daily_Log__c/fields/Distributor_Id__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Id__c</fullName>
    <formula>Current_Beat__r.Primary_Customer__r.SAP_Customer_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributor Id</label>
    <type>Text</type>
</CustomField>