force-app/main/default/objects/Daily_Log__c/fields/Effective_Man_Hours__c.field-meta.xml
<CustomField>
    <fullName>Effective_Man_Hours__c</fullName>
    <formula>IF(
AND(NOT(ISBLANK(Day_started_time__c)), NOT(ISBLANK( Last_Visit__r.Actual_Start_Time__c ))),
TEXT(
FLOOR((Last_Visit__r.Actual_Start_Time__c - Day_started_time__c) * 24)
) &amp; &quot; hrs &quot; &amp;
TEXT(
ROUND(MOD((Last_Visit__r.Actual_Start_Time__c - Day_started_time__c) * 1440, 60), 0)
) &amp; &quot; mins&quot;,
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective Man Hours</label>
    <type>Text</type>
</CustomField>