force-app/main/default/objects/Daily_Log__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipName>Daily_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>