force-app/main/default/objects/Daily_Log__c/fields/Employee_Active__c.field-meta.xml
<CustomField>
    <fullName>Employee_Active__c</fullName>
    <formula>Owner:User.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Active</label>
    <type>Checkbox</type>
</CustomField>