force-app/main/default/objects/Daily_Log__c/fields/Employee_Area__c.field-meta.xml
<CustomField>
    <fullName>Employee_Area__c</fullName>
    <formula>Text( Owner:User.Area__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Area</label>
    <type>Text</type>
</CustomField>