force-app/main/default/objects/Daily_Log__c/fields/End_Day_Odometer_Reading_KM__c.field-meta.xml
<CustomField>
    <fullName>End_Day_Odometer_Reading_KM__c</fullName>
    <label>End Day Odometer Reading (KM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>