force-app/main/default/objects/Daily_Log__c/fields/EOD_Time_24_Hr__c.field-meta.xml
<CustomField>
    <fullName>EOD_Time_24_Hr__c</fullName>
    <formula>IF(
NOT(ISBLANK(Day_ended_time__c)),
MID(TEXT(Day_ended_time__c+ (5.5/24)), 12, 5),
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EOD Time</label>
    <type>Text</type>
</CustomField>