force-app/main/default/objects/Daily_Log__c/fields/EOD_Time__c.field-meta.xml
<CustomField>
    <fullName>EOD_Time__c</fullName>
    <formula>IF(
NOT(ISBLANK(Day_ended_time__c)),
TEXT(
IF(
MOD(
VALUE(MID(TEXT(Day_ended_time__c+ (5.5/24)), 12, 2)),
12
) = 0,
12,
MOD(
VALUE(MID(TEXT(Day_ended_time__c+ (5.5/24)), 12, 2)),
12
)
)
) &amp; &quot;:&quot; &amp;
MID(TEXT(Day_ended_time__c+ (5.5/24)), 15, 2) &amp; &quot; &quot; &amp;
IF(
VALUE(MID(TEXT(Day_ended_time__c+ (5.5/24)), 12, 2)) &gt;= 12,
&quot;PM&quot;,
&quot;AM&quot;
),
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EOD Time</label>
    <type>Text</type>
</CustomField>