force-app/main/default/objects/Daily_Log__c/fields/First_Call_Time_24_Hr__c.field-meta.xml
<CustomField>
    <fullName>First_Call_Time_24_Hr__c</fullName>
    <formula>IF(
NOT(ISBLANK(First_Visit__r.Actual_Start_Time__c)),
MID(TEXT(First_Visit__r.Actual_Start_Time__c + (5.5/24)), 12, 5),
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Call Time</label>
    <type>Text</type>
</CustomField>