force-app/main/default/objects/Daily_Log__c/fields/First_Check_In_Visit__c.field-meta.xml
<CustomField>
    <fullName>First_Check_In_Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>First Check-In Visit</label>
    <referenceTo>Visit__c</referenceTo>
    <relationshipName>Daily_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>