force-app/main/default/objects/Daily_Log__c/fields/First_Visit__c.field-meta.xml
<CustomField>
    <fullName>First_Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>First Visit</label>
    <referenceTo>Visit__c</referenceTo>
    <relationshipLabel>Daily Attendances (First Visit)</relationshipLabel>
    <relationshipName>Daily_Attendances1</relationshipName>
    <type>Lookup</type>
</CustomField>