force-app/main/default/objects/Daily_Log__c/fields/First_Visit_Form_Visit__c.field-meta.xml
<CustomField>
    <fullName>First_Visit_Form_Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>First Visit Form Visit</label>
    <referenceTo>Visit_Form__c</referenceTo>
    <relationshipLabel>Daily Attendances</relationshipLabel>
    <relationshipName>Daily_Attendances</relationshipName>
    <type>Lookup</type>
</CustomField>