force-app/main/default/objects/Daily_Log__c/fields/First_Visit_Time1__c.field-meta.xml
<CustomField>
    <fullName>First_Visit_Time1__c</fullName>
    <formula>IF(
NOT(ISBLANK(First_Visit__r.Actual_Start_Time__c)),
TEXT(
IF(
MOD(
VALUE(MID(TEXT(First_Visit__r.Actual_Start_Time__c+ (5.5/24)), 12, 2)),
12
) = 0,
12,
MOD(
VALUE(MID(TEXT(First_Visit__r.Actual_Start_Time__c+ (5.5/24)), 12, 2)),
12
)
)
) &amp; &quot;:&quot; &amp;
MID(TEXT(First_Visit__r.Actual_Start_Time__c+ (5.5/24)), 15, 2) &amp; &quot; &quot; &amp;
IF(
VALUE(MID(TEXT(First_Visit__r.Actual_Start_Time__c+ (5.5/24)), 12, 2)) &gt;= 12,
&quot;PM&quot;,
&quot;AM&quot;
),
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Visit Time1</label>
    <type>Text</type>
</CustomField>