force-app/main/default/objects/Daily_Log__c/fields/First_Visit_Time__c.field-meta.xml
<CustomField>
    <fullName>First_Visit_Time__c</fullName>
    <formula>TIMEVALUE(First_Visit__r.Actual_Start_Time__c + (5.5/24))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Call Time</label>
    <type>Time</type>
</CustomField>