force-app/main/default/objects/Daily_Log__c/fields/Last_Call_Time_24_Hr__c.field-meta.xml
<CustomField>
    <fullName>Last_Call_Time_24_Hr__c</fullName>
    <formula>IF(
NOT(ISBLANK(Last_Visit__r.Actual_Start_Time__c)),
MID(TEXT(Last_Visit__r.Actual_Start_Time__c+ (5.5/24)), 12, 5),
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Call Time</label>
    <type>Text</type>
</CustomField>