force-app/main/default/objects/Daily_Log__c/fields/Last_Visit_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Visit_Date_and_Time__c</fullName>
    <formula>Last_Visit__r.Actual_Start_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Visit Date and Time</label>
    <type>DateTime</type>
</CustomField>