force-app/main/default/objects/Daily_Log__c/fields/Last_visit_distance__c.field-meta.xml
<CustomField>
    <fullName>Last_visit_distance__c</fullName>
    <label>Last visit distance (Google)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>