force-app/main/default/objects/Daily_Log__c/fields/Last_Visit_Form_Visit__c.field-meta.xml
<CustomField>
    <fullName>Last_Visit_Form_Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Visit Form Visit</label>
    <referenceTo>Visit_Form__c</referenceTo>
    <relationshipLabel>Daily Attendances (Last Visit Form Visit)</relationshipLabel>
    <relationshipName>Daily_Attendances1</relationshipName>
    <type>Lookup</type>
</CustomField>