force-app/main/default/objects/Daily_Log__c/fields/Last_Visit_Form_Visit_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Visit_Form_Visit_Time__c</fullName>
    <formula>Last_Visit_Form_Visit__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Visit Form Visit Time</label>
    <type>DateTime</type>
</CustomField>