force-app/main/default/objects/Daily_Log__c/fields/Last_Visit_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Visit_Time__c</fullName>
    <formula>TIMEVALUE( Last_Visit__r.Actual_Start_Time__c + (5.5/24))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Call Time</label>
    <type>Time</type>
</CustomField>