force-app/main/default/objects/Daily_Log__c/fields/Less_than_1min_Visit__c.field-meta.xml
<CustomField>
    <fullName>Less_than_1min_Visit__c</fullName>
    <label>Less than 1min Visit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>