force-app/main/default/objects/Daily_Log__c/fields/Less_Than_2_mins_Visit__c.field-meta.xml
<CustomField>
    <fullName>Less_Than_2_mins_Visit__c</fullName>
    <label>Less Than 2 mins Visit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>