force-app/main/default/objects/Daily_Log__c/fields/Log_Month__c.field-meta.xml
<CustomField>
    <fullName>Log_Month__c</fullName>
    <formula>MONTH( DATEVALUE( Day_started_time__c )  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Log Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>