force-app/main/default/objects/Daily_Log__c/fields/Log_Start_time_24_Hour_Format__c.field-meta.xml
<CustomField>
    <fullName>Log_Start_time_24_Hour_Format__c</fullName>
    <formula>IF(
  NOT(ISBLANK(Day_started_time__c)),
  MID(TEXT(Day_started_time__c + (5.5/24)), 12, 5),
  NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Log Start Time</label>
    <type>Text</type>
</CustomField>