force-app/main/default/objects/Daily_Log__c/fields/Log_Year__c.field-meta.xml
<CustomField>
    <fullName>Log_Year__c</fullName>
    <formula>YEAR(  DATEVALUE( Day_started_time__c )  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Log Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>