force-app/main/default/objects/Daily_Log__c/fields/LogDate__c.field-meta.xml
<CustomField>
    <fullName>LogDate__c</fullName>
    <formula>DATEVALUE(  Day_started_time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Log Date</label>
    <type>Date</type>
</CustomField>