force-app/main/default/objects/Daily_Log__c/fields/Login_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Login_User_Id__c</fullName>
    <formula>Owner:User.Username</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Login User Id</label>
    <type>Text</type>
</CustomField>