force-app/main/default/objects/Daily_Log__c/fields/LSD__c.field-meta.xml
<CustomField>
    <fullName>LSD__c</fullName>
    <formula>IF(Total_Productive_Calls_Made__c = 0,0, TLSD__c / Total_Productive_Calls_Made__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average LSD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>