force-app/main/default/objects/Daily_Log__c/fields/Market_Hours__c.field-meta.xml
<CustomField>
    <fullName>Market_Hours__c</fullName>
    <formula>IF(
AND(NOT(ISBLANK( First_Visit__r.Actual_Start_Time__c )), NOT(ISBLANK( Last_Visit__r.Actual_Start_Time__c ))),
TEXT(
FLOOR(( Last_Visit__r.Actual_Start_Time__c- First_Visit__r.Actual_Start_Time__c ) * 24)
) &amp; &quot; hrs &quot; &amp;
TEXT(
ROUND(MOD(( Last_Visit__r.Actual_Start_Time__c- First_Visit__r.Actual_Start_Time__c ) * 1440, 60), 0)
) &amp; &quot; mins&quot;,
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Hours</label>
    <type>Text</type>
</CustomField>