force-app/main/default/objects/Daily_Log__c/fields/Mode_of_transport__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_transport__c</fullName>
    <label>Mode of transport</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Mode_of_transport</valueSetName>
    </valueSet>
</CustomField>