force-app/main/default/objects/Daily_Log__c/fields/Mode_of_transport_Public__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_transport_Public__c</fullName>
    <label>Mode of transport (Public)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Mode_of_transport_Public</valueSetName>
    </valueSet>
</CustomField>