force-app/main/default/objects/Daily_Log__c/fields/NC__c.field-meta.xml
<CustomField>
    <fullName>NC__c</fullName>
    <formula>Normal_Call__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>