force-app/main/default/objects/Daily_Log__c/fields/New_Calls__c.field-meta.xml
<CustomField>
    <fullName>New_Calls__c</fullName>
    <label>New Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>