force-app/main/default/objects/Daily_Log__c/fields/No_Of_Outlets_from_Non_PJP_Order__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Outlets_from_Non_PJP_Order__c</fullName>
    <formula>Non_PJP_Order_Calls__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Of Outlets from Non PJP Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>