force-app/main/default/objects/Daily_Log__c/fields/No_of_Outlets_from_Visit_forms__c.field-meta.xml
<CustomField>
    <fullName>No_of_Outlets_from_Visit_forms__c</fullName>
    <formula>Unique_Visit_form_Visits__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of Outlets from Visit forms</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>