force-app/main/default/objects/Daily_Log__c/fields/Non_PJP_Normal_Calls__c.field-meta.xml
<CustomField>
    <fullName>Non_PJP_Normal_Calls__c</fullName>
    <label>Non PJP Normal Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>