force-app/main/default/objects/Daily_Log__c/fields/Non_PJP_PC__c.field-meta.xml
<CustomField>
    <fullName>Non_PJP_PC__c</fullName>
    <formula>IF(No_Of_Outlets_from_Non_PJP_Order__c==0 ,0, Non_PJP_Productive_Calls__c/ No_Of_Outlets_from_Non_PJP_Order__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non PJP PC %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>