force-app/main/default/objects/Daily_Log__c/fields/Normal_Call__c.field-meta.xml
<CustomField>
    <fullName>Normal_Call__c</fullName>
    <label>PJP Normal Call</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>